# cf-cli

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  PEBBLE-SPEC.md  README.md
src/: cli.rs  config.rs  main.rs  output.rs
src/commands/: caddy.rs  dns.rs  mod.rs  r2.rs  registry.rs  service.rs
